--- a/scss/mediaquery/_small.scss
+++ b/scss/mediaquery/_small.scss
@@ -1,4 +1,8 @@
 @media (max-width: 620px) {
+  body {
+    overflow: visible;
+  }
+
   main {
     display: flex;
     align-items: center;
